src/argocd/bootstrap-resources/unimus/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unimus
  labels:
    app.kubernetes.io/name: unimus
spec:
  replicas: 1
  revisionHistoryLimit: 0 
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unimus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unimus
    spec:
      containers:
      - name: unimus
        image: docker.io/croc/unimus:2.6.0
        ports:
          - containerPort: 8085
            name: http
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /etc/unimus
      volumes:
        - name: config
          secret:
            secretName: unimus-config
